# ing1-ece-world

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Guitar_hero.c  PH_programmes.c  README.md  TAupeLA V5.c  TB_programmes.c  TP_programmes.c  deplacement.c  head.h  jackpot.c  main.c  not_main.c  not_main.h  petite fonction.c  pfc.c  print_chen.c  score1.txt  score2.txt  score4.txt  score5.txt  snake.c  taup_la.c  taupeLA.c  taupeLa.cpp  taupe_la  taupela V2
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
assets/: README.md
marp-projet-info/: presentation.md
src/: Guitar_hero.c  PH_programmes.c  Snake_programmes.c  TB_programmes.c  TP_programmes.c  jackpot.c  main.c  petite_fonction.c  pfc.c  print_chen.c
untitled16/: CMakeLists.txt  main.c
